--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Arial', sans-serif;
-	background: #232526;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #232526; 
+	background: -webkit-linear-gradient(to right, #414345, #232526); 
+	background: linear-gradient(to right, #414345, #232526); 
 
 
 }
@@ -17,7 +17,7 @@ body {
 	font-size: 40px;
 	font-family: roboto;
 	font-weight: 900;
-	background: linear-gradient(to right, #ff0000, #510f0f); /* Adjust colors as needed */
+	background: linear-gradient(to right, #ff0000, #510f0f); 
     	-webkit-background-clip: text;
 	background-clip: text;
    	 color: transparent;
@@ -66,7 +66,7 @@ body {
 	text-align:center;	
 	padding: 5%;	
 	font-size: 30px;
-	background: linear-gradient(to right, #ff0000, #510f0f); /* Adjust colors as needed */
+	background: linear-gradient(to right, #ff0000, #510f0f);
     	-webkit-background-clip: text;
 	background-clip: text;
    	 color: transparent;
